Thu Mar 19 21:25:25 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_copy_wb_protected_attribute): demote `dest' object.

Thu Mar 19 16:18:00 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h: export rb_gc_verify_internal_consistency().

Thu Mar 19 16:15:24 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_info): show allocation site if GC_DEBUG is not 0.

Thu Mar 19 16:12:01 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj_of): fix RGENGC_OLD_NEWOBJ_CHECK logics.
	  * skip on incremental marking because not sure what happen :p
	  * rb_gc_writebarrier_remember() is enough to mark children.

Thu Mar 19 16:08:42 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_copy_wb_protected_attribute): need demote for old objects.

Thu Mar 19 10:31:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_bytes): release the handle in the static
	  variable, not a local variable.

Thu Mar 19 06:30:35 2015  Koichi Sasada  <ko1@atdot.net>

	* object.c (rb_obj_clone): do not touch age (FL_PROMOTED[01]) because
	  rb_obj_alloc() can return old object in debug.

Thu Mar 19 06:29:28 2015  Koichi Sasada  <ko1@atdot.net>

	* test/objspace/test_objspace.rb: flag name was changed
	  (long_lived -> uncollectible).

Thu Mar 19 05:30:13 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_mark): skip some marking if iseq->orig is available.

	* iseq.c (rb_iseq_clone): need WB for iseq1->klass = iseq0->klass
	  (done in MEMCPY).

Thu Mar 19 04:55:53 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h (IMEMO_DEBUG): added.

	* internal.h: remove unused FL_IMEMO_MARK_V[0-3].

	* gc.c (rb_imemo_new_debug): added.

	* gc.c (obj_info): show imemo type name.

Thu Mar 19 04:52:26 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RGENGC_OLD_NEWOBJ_CHECK): add check mechanism.

	  If RGENGC_OLD_NEWOBJ_CHECK > 0, then create old objects
	  (not new objects) periodically.

	  Create one old objects per RGENGC_OLD_NEWOBJ_CHECK objects are
	  created.
