@@ -1,3 +1,7 @@
+Thu Mar 19 22:12:46 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (rb_copy_wb_protected_attribute): `dest' can be WB unprotected.
+
 Thu Mar 19 21:25:25 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (rb_copy_wb_protected_attribute): demote `dest' object.
